--- a/index.html
+++ b/index.html
@@ -1,9 +1,37 @@
-<html>
- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Luis Chavez Luna</title>
+    <link rel="stylesheet" href="/Styles/general.css">
+    <link rel="stylesheet" href="/Styles/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+</head>
 <body>
-  <h1>LUIS</h1>
-  <p>Welcome to my website! This is a GIT test</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+    <header>
+        <img class="logo" src="/Resources/img/logo-transp.png" alt="">
+    </header>
+    <div class="container-general">
+        <div class="hero">
+            <h2 class="hi">
+                <b>Hi! I'm Luis</b> and I love mixing
+            </h2>
+            <h1 class="blue-text"><i>Crazy</i> ideas + <br> <i>strategic</i> planning</h1>
+            <h2 class="subtitle">in <b>stunning</b> and <b>impactful</b> <br> marketing campaigns.</h2>
+        </div>
+        <div class="buttons">
+            <a href="/me.html"><button type="button" class="button">This is me!</button></a>
+            <a href="/work.html"><button type="button" class="button">Check my work</button></a>
+            <a href="/projects.html"><button type="button" class="button">Don't click this.</button></a>
+        </div>
+        <footer>
+            <p>Oh, and yes. I coded this page by myself.</p>
+        </footer>
+    </div>
+    <script src="/script.js"></script>
 </body>
- 
 </html>
