--- a/me.html
+++ b/me.html
@@ -5,11 +5,75 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luis Chavez Luna</title>
+    <link rel="stylesheet" href="/Styles/general.css">
+    <link rel="stylesheet" href="/Styles/me.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>This is me! Page under construction</h1>
+    <nav>
+        <img class="logo" src="/Resources/img/logo-transp.png" alt="">
+        <div>
+            <ul class="menus">
+                <li class="menu" id="current-menu">This is me</li>
+                <li class="menu">Check my work</li>
+                <li class="menu">Still... don't click this.</li>
+            </ul>
+        </div>
+    </nav>
+    <div class="ultra-container">
+        <div class="big-text">
+            <h2 class="blue">Hi again! </h2><h2>I'm Luis,</h2>
+        </div>
+        <div class="hero">
+            <div class="p-container">
+                <p>A strategic marketer and digital media specialist based in the United Kingdom.</p>
+                <p>I was asked once in a job interview how would my best friend describe me, and after thinking for 1.73 seconds I said: <b>“risk-taker”</b>. And yes, maybe he would say so because I’m the booking last minute tickets, saying “yes” to every plan, doing the mountain hike type of person; but for me, I feel that <b>embracing risk</b> is part of every successful plan.</p>
+                <p><i>'Jumping into the pool'</i> doesn’t mean you ignore the risks; it means you have assessed them, tried to minimize them, and actively work for the success of your plan. If the plan doesn’t go as expected, it’s time to learn form the defeat, improve and start again.</p>
+                <p> <b>Oh yes!</b> You may have landed here to see my qualifications, not some philosophical description about me. Here they are:</p>
+            </div>
+            <img src="/Resources/img/about-me.JPG" alt="Photo of Luis">
+        <div class="grid">
+            <div class="qual-box">
+                <h4>Undergraduate</h4>
+                <p>Communications and Corporate Image, Universidad Peruana de Ciencias Aplicadas - UPC</p>
+                <p>Lima, Peru</p>
+            </div>
+            <div class="qual-box">
+                <h4>Postgraduate</h4>
+                <p>MSc Marketing, Brunel University London. First Class Honors.</p>
+                <p>London, United Kingdom</p>
+            </div>
+            <div class="qual-box">
+                <h4>Work Experience</h4>
+                <p>After my first internship in a PR Agency, I switched to the corporate world in the leading bank in Perú: Banco de Crédito del Perú. I worked my way up from intern to senior analyst in the marketing department, developing internal communications campaigns, managed digital marketing platforms and projects, and advised internal clients in their communication needs. After 5 years, I decided I wanted to switch my playing field from Latin America to Europe, and moved to London to pursue a Master’s degree. Check out more details on my LinkedIn <a href="https://www.linkedin.com/in/luischavezl/">here!</a></p>
+            </div>
+        </div>
+        <div class="after-text">
+            <h4>Of course, life wouldn't be fun if I only stayed with the knowledge from my degrees and work experience.</h6>
+            <h4>That is why I taught myself more skills:</h6>
+        </div>
+        <div class="skills">
+            <div class="right">
+                <ul>
+                    <li>Video production</li>
+                    <li>3D Modelling</li>
+                    <li>Web Development (HTML, CSS, JS, React)</li>
+                </ul>
+            </div>
+            <div class="left">
+                <ul>
+                    <li>Keywords research</li>
+                    <li>Paid advertising</li>
+                    <li>LiveStreaming in OBS Studio</li>
+                </ul>
+            </div>
+        </div>
+        <div class="cta">
+            <h3>Now click this and see some cool projects I worked on!</h3>
+        <a href="/work.html"><button>Click me!</button></a>
+        </div>
+    </div>
 </body>
 </html>
