worked on me page, still needs some work before its done

--- a/me.html
+++ b/me.html
@@ -30,22 +30,23 @@
             <div class="p-container">
                 <p>A strategic marketer and digital media specialist based in the United Kingdom.</p>
                 <p>I was asked once in a job interview how would my best friend describe me, and after thinking for 1.73 seconds I said: <b>“risk-taker”</b>. And yes, maybe he would say so because I’m the booking last minute tickets, saying “yes” to every plan, doing the mountain hike type of person; but for me, I feel that <b>embracing risk</b> is part of every successful plan.</p>
-                <p><i>'Jumping into the pool'</i> doesn’t mean you ignore the risks; it means you have assessed them, tried to minimize them, and actively work for the success of your plan. If the plan doesn’t go as expected, it’s time to learn form the defeat, improve and start again.</p>
+                <p><i>'Jumping into the pool'</i> doesn't mean you ignore the risks; it means you have assessed them, tried to minimize them, and actively work for the success of your plan. If the plan doesn’t go as expected, it’s time to learn form the defeat, improve and start again.</p>
                 <p> <b>Oh yes!</b> You may have landed here to see my qualifications, not some philosophical description about me. Here they are:</p>
             </div>
             <img src="/Resources/img/about-me.JPG" alt="Photo of Luis">
+        </div>
         <div class="grid">
-            <div class="qual-box">
+            <div class="qual-box" id="under">
                 <h4>Undergraduate</h4>
                 <p>Communications and Corporate Image, Universidad Peruana de Ciencias Aplicadas - UPC</p>
                 <p>Lima, Peru</p>
             </div>
-            <div class="qual-box">
+            <div class="qual-box" id="post">
                 <h4>Postgraduate</h4>
                 <p>MSc Marketing, Brunel University London. First Class Honors.</p>
                 <p>London, United Kingdom</p>
             </div>
-            <div class="qual-box">
+            <div class="qual-box" id="work">
                 <h4>Work Experience</h4>
                 <p>After my first internship in a PR Agency, I switched to the corporate world in the leading bank in Perú: Banco de Crédito del Perú. I worked my way up from intern to senior analyst in the marketing department, developing internal communications campaigns, managed digital marketing platforms and projects, and advised internal clients in their communication needs. After 5 years, I decided I wanted to switch my playing field from Latin America to Europe, and moved to London to pursue a Master’s degree. Check out more details on my LinkedIn <a href="https://www.linkedin.com/in/luischavezl/">here!</a></p>
             </div>
