finished MVP, only web, needs mobile version

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container-general">
         <div class="hero">
             <h2 class="hi">
-                <b>Hi! I'm Luis</b> and I love mixing
+                <b>Hi! I'm Luis</b>, and I love mixing
             </h2>
             <h1 class="blue-text"><i>Crazy</i> ideas + <br> <i>strategic</i> planning</h1>
             <h2 class="subtitle">in <b>stunning</b> and <b>impactful</b> <br> marketing campaigns.</h2>
