--- a/me.html
+++ b/me.html
@@ -13,12 +13,12 @@
 </head>
 <body>
     <nav>
-        <img class="logo" src="/Resources/img/logo-transp.png" alt="">
+        <a href="/index.html"><img class="logo" src="/Resources/img/logo-transp.png" alt=""></a>
         <div>
             <ul class="menus">
                 <li class="menu" id="current-menu">This is me</li>
-                <li class="menu">Check my work</li>
-                <li class="menu">Still... don't click this.</li>
+                <a href="/work.html"><li class="menu">Check my work</li></a>
+                <a href="/projects.html"><li class="menu">Still... don't click this.</li></a>
             </ul>
         </div>
     </nav>
@@ -48,7 +48,7 @@
             </div>
             <div class="qual-box" id="work">
                 <h4>Work Experience</h4>
-                <p>After my first internship in a PR Agency, I switched to the corporate world in the leading bank in Perú: Banco de Crédito del Perú. I worked my way up from intern to senior analyst in the marketing department, developing internal communications campaigns, managed digital marketing platforms and projects, and advised internal clients in their communication needs. After 5 years, I decided I wanted to switch my playing field from Latin America to Europe, and moved to London to pursue a Master’s degree. Check out more details on my LinkedIn <a href="https://www.linkedin.com/in/luischavezl/">here!</a></p>
+                <p>After my first internship in a PR Agency, I switched to the corporate world in the leading bank in Perú: Banco de Crédito del Perú. I worked my way up from intern to senior analyst in the marketing department, developing internal communications campaigns, managing digital marketing platforms and projects, and advising internal clients in their communication needs. After 5 years, I decided I wanted to switch my playing field from Latin America to Europe, and moved to London to pursue a Master’s degree. Check out more details on my LinkedIn <a href="https://www.linkedin.com/in/luischavezl/">here!</a></p>
             </div>
         </div>
         <div class="after-text">
@@ -60,20 +60,20 @@
                 <ul>
                     <li>Video production</li>
                     <li>3D Modelling</li>
-                    <li>Web Development (HTML, CSS, JS, React)</li>
+                    <li>Web Development</li>
                 </ul>
             </div>
             <div class="left">
                 <ul>
                     <li>Keywords research</li>
                     <li>Paid advertising</li>
-                    <li>LiveStreaming in OBS Studio</li>
+                    <li>LiveStreaming - OBS Studio</li>
                 </ul>
             </div>
         </div>
         <div class="cta">
             <h3>Now click this and see some cool projects I worked on!</h3>
-        <a href="/work.html"><button>Click me!</button></a>
+            <a href="/work.html"><butto class="button">Click me!</button></a>
         </div>
     </div>
 </body>
