--- a/projects.html
+++ b/projects.html
@@ -6,10 +6,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luis Chavez Luna</title>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-<link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/Styles/general.css">
+    <link rel="stylesheet" href="/Styles/projects.css">
 </head>
 <body>
-  <h1>These are my personal projects. Page under construction</h1>  
+  <nav>
+    <a href="/index.html"><img class="logo" src="/Resources/img/logo-transp.png" alt=""></a>
+    <div>
+        <ul class="menus">
+            <a href="/me.html"><li class="menu">This is me</li></a>
+            <a href="/work.html"><li class="menu">Check my work</li></a>
+            <a href="/projects.html"><li class="menu" id="current-menu">Still... don't click this.</li></a>
+        </ul>
+    </div>
+  </nav>
+  <div class="ultra-container">
+    <div class="header">
+      <h2>Ahh! Curiosity!</h2>
+      <p id="ptop">Coincidently, that's the same feeling that fuels my</p>
+      <h3>personal projects.</h3>
+      <p id="pbot">Check what I've been working on lately below.</p>
+    </div>
+    <div class="row">
+      <div class="img-cont">
+        <img src="/Resources/img/placeholder-500x500.png" alt="">
+      </div>
+        <div class="content">
+          <h5>Labdon: A tech YouTube channel.</h5>
+          <p>When my passion for technology met my desire to learn more about content creation, I decided to create a YouTube channel to help people understand more about tech. My content ranges from tech products, tips, reviews and thoughts about the future of the industry, all targeting a Latin American audience.
+             <br><br> Over time, as my knowledge of digital media grew, the same happened to the quality of my videos. Also, I learned about growth marketing, keyword targeting, paid ads and organic reach.</p>
+              <a href="#"><button class="button">Visit my channel</button></a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="content">
+          <h5>TikTok: My life in London.</h5>
+          <p>The growth of TikTok as a discovery platform for brands is imminent, however if I really wanted to understand the platform and how to get the most out of it (So I can leverage it when managing a brand’s account), I had to experience it firsthand in a creator perspective.
+             <br><br> I started a TikTok profile sharing my experiences while studying and living in London to a Latin American audience, getting over 12k followers by the first month.</p>
+              <a href="#"><button class="button">Check my TikToks</button></a>
+      </div>
+      <div class="img-cont">
+        <img src="/Resources/img/placeholder-500x500.png" alt="">
+      </div> 
+    </div>
+    <div class="row">
+      <div class="img-cont">
+        <img src="/Resources/img/placeholder-500x500.png" alt="">
+       </div> 
+        <div class="content">
+          <h5>Web development</h5>
+          <p>I believe creativity is not just about imagining a crazy marketing campaign and blowing minds with it. It’s about facing a problem and using all the resources in your inventory to find a solution for it. And the feeling of achievement when your project finally runs bug-free as intended? Priceless.
+             <br><br> That’s what motivated me to learn how to code, and as I was used to visual work, I started with Front End development. So far I love it! So much I challenged myself to not use Wix or Squarespace for my website, but to code it by myself. You’re seeing the result!</p>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
