--- a/work.html
+++ b/work.html
@@ -8,8 +8,44 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="/Styles/general.css">
+<link rel="stylesheet" href="/Styles/work.css">
 </head>
 <body>
-    <h1>These is my work! Page under construction</h1>
+    <nav>
+        <a href="/index.html"><img class="logo" src="/Resources/img/logo-transp.png" alt=""></a>
+        <div>
+            <ul class="menus">
+                <a href="/me.html"><li class="menu">This is me</li></a>
+                <a href="/work.html"><li class="menu" id="current-menu">Check my work</li></a>
+                <a href="/projects.html"><li class="menu">Still... don't click this.</li></a>
+            </ul>
+        </div>
+    </nav>
+    <div class="ultra-container">
+    <div class="upper-text">
+        <h5>"If I can't scuba, then what's this all been about?" - Creed Bratton, The Office.</h5>
+        <h2>Likewise, if I can't have fun with my work, <b>then what's this all been about?</b></h2>
+        <p>Check out some of the coolest campaigns I have worked on below.</p>
+    </div>
+    <div class="grid-cont">
+        <div class="grimg" id="sq1">
+            <p>"La Sombra": <br> A cybersecurity mini-series</p>
+        </div>
+        <div class="grimg" id="sq2">
+            <p>"Ciberseguri-RAP"</p>
+        </div>
+        <div class="grimg" id="sq3">
+            <p>"Yo Mismo Soy": <br> A Helpdesk stand-up comedy</p>
+        </div>
+        <div class="grimg" id="sq4">
+            <p>Workplace by Meta @ BCP</p>
+        </div>
+    </div>
+    <div class="cta">
+        <h3>Still want to know more?</h3>
+        <a href="/projects.html"><button class="button">Don't click this</button></a>
+    </div>
+</div>
 </body>
 </html>
