added support for mobile on index.html

--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
             <h2 class="subtitle">in <b>stunning</b> and <b>impactful</b> <br> marketing campaigns.</h2>
         </div>
         <div class="buttons">
-            <a href="/me.html"><button type="button" class="button">This is me!</button></a>
-            <a href="/work.html"><button type="button" class="button">Check my work</button></a>
-            <a href="/projects.html"><button type="button" class="button">Don't click this.</button></a>
+            <a href="/work.html" id="double"><button type="button" class="button" id="b1">Check my work</button></a>
+            <a href="/me.html" id="single1"><button type="button" class="button" id="b2">This is me!</button></a>
+            <a href="/projects.html" id="single2" ><button type="button" class="button" id="b3">Don't click this.</button></a>
         </div>
+        <img id="mainimg" src="/Resources/img/luis-transp.png" alt="">
         <footer>
             <p>Oh, and yes. I coded this page by myself.</p>
         </footer>
