added support for mobile all pages

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <h2 class="subtitle">in <b>stunning</b> and <b>impactful</b> <br> marketing campaigns.</h2>
         </div>
         <div class="buttons">
-            <a href="/work.html" id="double"><button type="button" class="button" id="b1">Check my work</button></a>
-            <a href="/me.html" id="single1"><button type="button" class="button" id="b2">This is me!</button></a>
-            <a href="/projects.html" id="single2" ><button type="button" class="button" id="b3">Don't click this.</button></a>
+            <a href="/work.html" class="button" id="double">Check my work</a>
+            <a href="/me.html" class="button" id="single1">This is me!</a>
+            <a href="/projects.html" class="button" id="single2" >Don't click this.</a>
         </div>
         <img id="mainimg" src="/Resources/img/luis-transp.png" alt="">
         <footer>
