--- a/projects.html
+++ b/projects.html
@@ -42,12 +42,15 @@
     </div>
     <div class="row">
       <div class="content">
+        <div class="img-cont" id="toogle1">
+          <img src="/Resources/img/placeholder-500x500.png" alt="">
+        </div> 
           <h5>TikTok: My life in London.</h5>
-          <p>The growth of TikTok as a discovery platform for brands is imminent, however if I really wanted to understand the platform and how to get the most out of it (So I can leverage it when managing a brand’s account), I had to experience it firsthand in a creator perspective.
+          <p>The growth of TikTok as a discovery platform for brands is imminent, however if I really wanted to understand the platform and how to get the most out of it (So I can leverage it when managing a brand's account), I had to experience it firsthand in a creator perspective.
              <br><br> I started a TikTok profile sharing my experiences while studying and living in London to a Latin American audience, getting over 12k followers by the first month.</p>
               <a href="#"><button class="button">Check my TikToks</button></a>
       </div>
-      <div class="img-cont">
+      <div class="img-cont" id="toogle2">
         <img src="/Resources/img/placeholder-500x500.png" alt="">
       </div> 
     </div>
@@ -57,10 +60,14 @@
        </div> 
         <div class="content">
           <h5>Web development</h5>
-          <p>I believe creativity is not just about imagining a crazy marketing campaign and blowing minds with it. It’s about facing a problem and using all the resources in your inventory to find a solution for it. And the feeling of achievement when your project finally runs bug-free as intended? Priceless.
-             <br><br> That’s what motivated me to learn how to code, and as I was used to visual work, I started with Front End development. So far I love it! So much I challenged myself to not use Wix or Squarespace for my website, but to code it by myself. You’re seeing the result!</p>
+          <p>I believe creativity is not just about imagining a crazy marketing campaign and blowing minds with it. It's about facing a problem and using all the resources in your inventory to find a solution for it. And the feeling of achievement when your project finally runs bug-free as intended? Priceless.
+             <br><br> That's what motivated me to learn how to code, and as I was used to visual work, I started with Front End development. So far I love it! So much I challenged myself to not use Wix or Squarespace for my website, but to code it by myself. You're seeing the result!</p>
       </div>
     </div>
+    <div class="cta" id="last-cont">
+      <h3>Want to know more about me?</h3>
+      <a href="/work.html" class="button">Click me!</a>
+  </div>
   </div>
 </body>
 </html>
