--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,7 @@
     </div>
     <div class="cta" id="last-cont">
       <h3>Want to know more about me?</h3>
-      <a href="/work.html" class="button">Click me!</a>
+      <a href="/me.html" class="button">Click me!</a>
   </div>
   </div>
 </body>
